# pokemon-api

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  pokemon_handler.rs
src/controller/: PokemonController.rs
src/pokedex/: client.rs  entities.rs  mod.rs  service.rs
src/translation/: client.rs
tests/: pokemon_detail_service_test.rs  shakespearian_translation_test.rs
