[package]
name = "pokemon"
version = "0.1.0"
authors = ["Felix Angell <felixangell@otzaf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
http = "0.2.3"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.4.5"
urldecode = "0.1.1"